[package]
name = "mapperss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
atom_syndication = "0.12.7"
bpaf = { version = "0.9.23", features = ["derive"] }
mediatype = "0.21.0"
reqwest = { version = "0.13.2", features = ["charset"]}
rss = { version = "2.0.12", features = ["atom"] }
tokio = { version = "1.49.0", features = ["full"] }
